@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1673] fixed removing hosts from hosts group, when user with permission only on host group updates it (Vedmak)
  - [ZBX-1638] added host name to link indicator (Aly)
  - [ZBX-1658] removed "Zabbix Status" from dashboard for non super admins (Aly)
  - [ZBX-1646] improved permissions check in Dashboard (Aly)
